# risk_fda_rag

./: pyproject.toml  test_service.py
app/services/: vector_service.py
base/: config.py  logger.py
docker/milvus_redis/: docker-compose.yml
risk_rag_qa/core/: demo_document_embedding.py  demo_risk_search.py  demo_search.py  liangou_document_embedding.py
risk_rag_qa/data/processed/: 亚马逊法规库_20250919.csv
risk_rag_qa/risk_document_loaders/: convert_xlsx_to_csv.py  demo_excel.py  fda_loader.py  liangou_data_loader.py  risk_csvloader.py  sentiment_analysis.py  test1.py
